# Rokey

./: .gitignore  CMakeLists.txt  README.md  Roke.sln  Roke.vcxproj  RokeSettings.vcxproj  XamlMetaDataProvider.idl  build.bat
src/: Roke.manifest  main.cpp  resources.rc
src/RokeSettings/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  app.manifest  generated_impl.cpp  packages.config
